fixed all screen wraping

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #input{
   font-size: 32px;
+  width: 700px;
 }
 
 #submit{
